@@ -239,6 +239,24 @@
       </plugin>
 
       <plugin>
+        <groupId>org.commonjava.maven.plugins</groupId>
+        <artifactId>directory-maven-plugin</artifactId>
+        <version>0.1</version>
+        <executions>
+          <execution>
+            <id>directories</id>
+            <goals>
+              <goal>highest-basedir</goal>
+            </goals>
+            <phase>initialize</phase>
+            <configuration>
+              <property>root.basedir</property>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
         <version>${maven-javadoc-plugin-version}</version>
@@ -361,48 +379,6 @@
             </executions>
           </plugin>
 
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-failsafe-plugin</artifactId>
-            <version>${maven-failsafe-plugin-version}</version>
-            <configuration> <!-- run tests in parallel -->
-              <argLine>
-                --illegal-access=permit
-              </argLine>
-              <encoding>UTF-8</encoding>
-              <argLine>${failsafeArgLine}</argLine>
-              <failIfNoTests>false</failIfNoTests>
-              <systemPropertyVariables>
-                <!-- Add any system properties here -->
-                <!--<project.build.directory>${project.build.directory}</project.build.directory> -->
-                <!--<weblogic.operator.root.directory>${basedir}/..</weblogic.operator.root.directory> -->
-                <!--<TAGS>${env.TAGS}</TAGS> -->
-                <maxThreads>3</maxThreads>
-              </systemPropertyVariables>
-            </configuration>
-
-            <executions>
-              <execution>
-                <id>acceptance-test</id>
-                <goals>
-                  <goal>integration-test</goal>
-                  <goal>verify</goal>
-                </goals>
-                <phase>integration-test</phase>
-                <configuration>
-                  <!-- do not run unit or integration tests -->
-                  <excludes>
-                    <exclude>**/*Test.java</exclude>
-                    <exclude>**/*IT.java</exclude>
-                  </excludes>
-                  <!-- just run acceptance tests -->
-                  <includes>
-                    <include>**/*AT.java</include>
-                  </includes>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
         </plugins>
       </build>
     </profile>
@@ -706,7 +682,6 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <src-integration-test>${project.basedir}/src/test/java</src-integration-test>
     <resource-integration-test>${project.basedir}/src/test/resources</resource-integration-test>
-    <root.basedir>${project.basedir}</root.basedir>
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
     <java.version.range>11</java.version.range>
